# rust-web-toy

./: Cargo.toml  LICENSE  README.md  default.nix  release.nix
nix/: sources.json
src/: main.rs
